# BRSS

./: CMakeLists.txt  README.md  Version_Globale.txt
cmake/: FindQWT.cmake  MacOSXBundleInfo.plist.in  QtCommon.cmake
data/: test.mcl
exe/: brss.cpp  global.cpp
img/: AppIcon.icns  brss.ai  brss.xcf  ressources.qrc
include/: test.hpp
include/brss/: brss.hpp  compiler.hpp  enzyme.hpp  lexer.hpp  molecule.hpp
include/brss/compiler/: exception.hpp  lexer.hpp  molecule_type.hpp  parser.hpp  program.hpp  reaction.hpp  token.hpp
include/brss/simulator/: molecule.hpp
include/hopp/: algo.hpp  container.hpp  random.hpp  string.hpp
include/hopp/color/private/: latex.hpp
include/hopp/compiler/: unused.hpp
include/hopp/container/: vector2.hpp  vector3.hpp  vector_pair.hpp
include/hopp/parser/: ini.hpp
include/hopp/time/: now.hpp  sleep.hpp
src/: main_window.cpp  main_window.hpp  main_window.ui  molecule_plot.cpp  molecule_plot.hpp  osg_widget.cpp  osg_widget.hpp  program.hpp
tests/: compiler.cpp  lexer.cpp  main.cpp
